# platoanalyze-tests

./: CMakeLists.txt
AD_BuoyancyDrivenFlowRa1e3/: CMakeLists.txt  buoyancy_driven_flow.exo  buoyancy_driven_flow.xml  gold_data.exo
AD_BuoyancyDrivenFlowRa1e4/: CMakeLists.txt  buoyancy_driven_flow.xml  exo.diff  gold_data.exo
AD_CavityDrivenFlowRe100/: CMakeLists.txt  cavity_driven_flow.xml  gold_data.exo  vtk.diff
AD_CavityDrivenFlowRe400/: amgx.json  cavity_driven_flow.exo  cavity_driven_flow.xml  exo.diff  gold_data.exo
AD_CellForcing/: CMakeLists.txt  tetrahedral_cell.jou  tetrahedral_cell.xml
AD_CompliantContact/: CMakeLists.txt  ball_in_cup.exo  ball_in_cup.jou  ball_in_cup.xml  exo.diff  gold_data.exo
AD_Elastic_BodyLoads_Hex27/: CMakeLists.txt  gold_data.exo  soap.xml
AD_Elastic_BodyLoads_Hex8/: CMakeLists.txt  gold_data.exo  soap.xml
AD_Elastic_BodyLoads_Tet10/: CMakeLists.txt  exo.diff  soap.xml
AD_Elastic_BodyLoads_Tet4/: CMakeLists.txt
AD_Elastic_Cube_Tet4/: CMakeLists.txt  cube.xml  exo.diff  gold_data.exo
AD_Elastic_Cube_Tri3/: CMakeLists.txt  amgx.json  cube.xml  exo.diff  gold_data.exo
AD_Elastic_Hatching/: CMakeLists.txt  Scenario_1.xml  bolted_bracket.exo  exo.diff
AD_Elastic_Hex27/: CMakeLists.txt  exo.diff  gold_data.exo  soap.xml
AD_Elastic_Hex8/: CMakeLists.txt  amgx.json  gold_data.exo  soap.xml
AD_Elastic_MultiBlock/: 3blocks.xml  CMakeLists.txt
AD_Elastic_MultiBlock_BodyLoads/: 3blocks.xml  CMakeLists.txt  amgx.json  exo.diff  vtk.diff
AD_Elastic_Tet10/: CMakeLists.txt  exo.diff  soap.xml
AD_Elastic_Tet4/: CMakeLists.txt  soap.xml
AD_Elastic_Tet4_Cubic_Material/: CMakeLists.txt  exo.diff  soap.xml
AD_Electroelastic/: exo.diff  soap.xml
AD_FlowChannelRe100/: CMakeLists.txt  flow_rectangular_channel.exo  flow_rectangular_channel.xml  gold_data.exo
AD_HeatEquation/: CMakeLists.txt  exo.diff  gold_data.exo  soap.exo  soap.jou  soap.xml  vtk.diff
AD_Homogenize/: exo.diff  tetrahedral_cell.xml
AD_MPCs/: CMakeLists.txt  ball_in_cup.exo  ball_in_cup.jou  ball_in_cup.xml  exo.diff  gold_data.exo  vtk.diff
AD_Plasticity/: CMakeLists.txt  cantilever_beam.exo  cantilever_beam.jou  cantilever_beam.xml  gold_data.exo  vtk.diff
AD_StabElastic/: CMakeLists.txt  amgx.json  bar.xml  exo.diff  gold_data.exo  vtk.diff
AD_StefanBoltzmann_Tet4/: CMakeLists.txt  block.xml  gold_data.exo  soap.xml
AD_StructuralDynamics/: CMakeLists.txt  beam2d.exo  beam2d.jou  input.xml
AD_Thermal_Hex27/: CMakeLists.txt  gold_data.exo
AD_Thermal_Hex8/: CMakeLists.txt  gold_data.exo
AD_Thermal_SourceTerm/: .logamgx  soap.xml  (+2 more)
(+462 files in other folders)
