if(ELLIPTIC)
  ADD_SUBDIRECTORY(AD_Elastic_Cube_Tri3)
  ADD_SUBDIRECTORY(AD_Elastic_Cube_Tet4)
  ADD_SUBDIRECTORY(AD_Elastic_Tet4)
  ADD_SUBDIRECTORY(AD_Elastic_Tet4_Cubic_Material)
  ADD_SUBDIRECTORY(AD_Elastic_Tet10)
  ADD_SUBDIRECTORY(AD_Elastic_BodyLoads_Tet4)
  ADD_SUBDIRECTORY(AD_Elastic_BodyLoads_Tet10)
  ADD_SUBDIRECTORY(AD_Elastic_MultiBlock)
  ADD_SUBDIRECTORY(AD_Elastic_MultiBlock_BodyLoads)
  ADD_SUBDIRECTORY(AD_CellForcing)
  ADD_SUBDIRECTORY(AD_Homogenize)
  ADD_SUBDIRECTORY(AD_StefanBoltzmann_Tet4)
  ADD_SUBDIRECTORY(AD_Thermal_Tet4)
  ADD_SUBDIRECTORY(AD_Thermal_Tet10)
  ADD_SUBDIRECTORY(AD_Thermal_SourceTerm)
  ADD_SUBDIRECTORY(AD_Thermoelastic_Tet4_BlockRotZ)
  ADD_SUBDIRECTORY(AD_Thermoelastic_Tet4_VaryBasis)
  ADD_SUBDIRECTORY(AD_MPCs)
  if (AMGX_FOUND)
    ADD_SUBDIRECTORY(AD_Electroelastic)
    ADD_SUBDIRECTORY(AD_Thermoelastic_Tet4)
    ADD_SUBDIRECTORY(AD_Thermoelastic_Tet4_RotZ)
    ADD_SUBDIRECTORY(AD_Elastic_Hatching)
    ADD_SUBDIRECTORY(AD_Thermoelastic_Tet10)
    ADD_SUBDIRECTORY(AD_Thermoelastic_Expression_Cubic_Material)
    ADD_SUBDIRECTORY(AD_Thermoelastic_Expression_Isotropic_Material)
    ADD_SUBDIRECTORY(AD_CompliantContact)
  endif()
  if(HEX_ELEMENTS)
    ADD_SUBDIRECTORY(AD_Elastic_Hex8)
    ADD_SUBDIRECTORY(AD_Elastic_Hex27)
    ADD_SUBDIRECTORY(AD_Elastic_BodyLoads_Hex8)
    ADD_SUBDIRECTORY(AD_Elastic_BodyLoads_Hex27)
    ADD_SUBDIRECTORY(AD_Thermal_Hex8)
    ADD_SUBDIRECTORY(AD_Thermal_Hex27)
    ADD_SUBDIRECTORY(AD_Thermoelastic_Hex8)
    ADD_SUBDIRECTORY(AD_Thermoelastic_Hex27)
    ADD_SUBDIRECTORY(Variable_Temp)
    ADD_SUBDIRECTORY(Variable_Pressure)
  endif()
endif()

if(HYPERBOLIC)
if(FLUILDS)
  ADD_SUBDIRECTORY(AD_FlowChannelRe100)
  ADD_SUBDIRECTORY(AD_CavityDrivenFlowRe100)
  ADD_SUBDIRECTORY(AD_CavityDrivenFlowRe400)
  ADD_SUBDIRECTORY(AD_BuoyancyDrivenFlowRa1e3)
  ADD_SUBDIRECTORY(AD_BuoyancyDrivenFlowRa1e4)
endif()
ADD_SUBDIRECTORY(AD_TransientDynamics)
ADD_SUBDIRECTORY(AD_TransientDynamicsAForm)
ADD_SUBDIRECTORY(AD_TransientDynamicsDamped)
ADD_SUBDIRECTORY(AD_TransientICs)
ADD_SUBDIRECTORY(AD_TransientTDBCs)
endif()

if(PARABOLIC)
ADD_SUBDIRECTORY(AD_TransientTM)
ADD_SUBDIRECTORY(AD_HeatEquation)
endif()

ADD_SUBDIRECTORY(PE_Integration)

if(STABILIZED)
ADD_SUBDIRECTORY(AD_StabElastic)
endif()

if(PLASTICITY)
ADD_SUBDIRECTORY(AD_Plasticity)
ADD_SUBDIRECTORY(AD_Thermoplasticity)
ADD_SUBDIRECTORY(AD_Thermoplasticity2)
endif()


if (PLATOANALYZE_ENABLE_ENGINEMESH)
  ADD_SUBDIRECTORY(IO_Tests)
endif()
